src/manda_text/MandaParser.cpp

// Generated from /Users/thosakwe/Source/Compilers/manda/src/manda_text/Manda.g4 by ANTLR 4.7


#include "MandaVisitor.h"

#include "MandaParser.h"


using namespace antlrcpp;
using namespace manda_text;
using namespace antlr4;

MandaParser::MandaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MandaParser::~MandaParser() {
  delete _interpreter;
}

std::string MandaParser::getGrammarFileName() const {
  return "Manda.g4";
}

const std::vector<std::string>& MandaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MandaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

MandaParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MandaParser::DirectiveContext *> MandaParser::ProgramContext::directive() {
  return getRuleContexts<MandaParser::DirectiveContext>();
}

MandaParser::DirectiveContext* MandaParser::ProgramContext::directive(size_t i) {
  return getRuleContext<MandaParser::DirectiveContext>(i);
}

std::vector<MandaParser::StatementContext *> MandaParser::ProgramContext::statement() {
  return getRuleContexts<MandaParser::StatementContext>();
}

MandaParser::StatementContext* MandaParser::ProgramContext::statement(size_t i) {
  return getRuleContext<MandaParser::StatementContext>(i);
}

std::vector<MandaParser::CommentContext *> MandaParser::ProgramContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::ProgramContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}


size_t MandaParser::ProgramContext::getRuleIndex() const {
  return MandaParser::RuleProgram;
}

antlrcpp::Any MandaParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::ProgramContext* MandaParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MandaParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(35);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(32);
        directive(); 
      }
      setState(37);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(41);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(38);
        statement(); 
      }
      setState(43);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MandaParser::DOC_COMMENT

    || _la == MandaParser::SINGLE_LINE_COMMENT) {
      setState(44);
      comment();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

MandaParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MandaParser::CommentContext::getRuleIndex() const {
  return MandaParser::RuleComment;
}

void MandaParser::CommentContext::copyFrom(CommentContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DocCommentContext ------------------------------------------------------------------

tree::TerminalNode* MandaParser::DocCommentContext::DOC_COMMENT() {
  return getToken(MandaParser::DOC_COMMENT, 0);
}

MandaParser::DocCommentContext::DocCommentContext(CommentContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::DocCommentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitDocComment(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SingleLineCommentContext ------------------------------------------------------------------

tree::TerminalNode* MandaParser::SingleLineCommentContext::SINGLE_LINE_COMMENT() {
  return getToken(MandaParser::SINGLE_LINE_COMMENT, 0);
}

MandaParser::SingleLineCommentContext::SingleLineCommentContext(CommentContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::SingleLineCommentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitSingleLineComment(this);
  else
    return visitor->visitChildren(this);
}
MandaParser::CommentContext* MandaParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 2, MandaParser::RuleComment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(52);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MandaParser::DOC_COMMENT: {
        _localctx = dynamic_cast<CommentContext *>(_tracker.createInstance<MandaParser::DocCommentContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(50);
        match(MandaParser::DOC_COMMENT);
        break;
      }

      case MandaParser::SINGLE_LINE_COMMENT: {
        _localctx = dynamic_cast<CommentContext *>(_tracker.createInstance<MandaParser::SingleLineCommentContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(51);
        match(MandaParser::SINGLE_LINE_COMMENT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DirectiveContext ------------------------------------------------------------------

MandaParser::DirectiveContext::DirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MandaParser::DirectiveContext::getRuleIndex() const {
  return MandaParser::RuleDirective;
}

void MandaParser::DirectiveContext::copyFrom(DirectiveContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ImportDirectiveContext ------------------------------------------------------------------

tree::TerminalNode* MandaParser::ImportDirectiveContext::ID() {
  return getToken(MandaParser::ID, 0);
}

std::vector<MandaParser::CommentContext *> MandaParser::ImportDirectiveContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::ImportDirectiveContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

MandaParser::ImportDirectiveContext::ImportDirectiveContext(DirectiveContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::ImportDirectiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitImportDirective(this);
  else
    return visitor->visitChildren(this);
}
//----------------- WithDirectiveContext ------------------------------------------------------------------

tree::TerminalNode* MandaParser::WithDirectiveContext::ID() {
  return getToken(MandaParser::ID, 0);
}

std::vector<MandaParser::CommentContext *> MandaParser::WithDirectiveContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::WithDirectiveContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

MandaParser::WithDirectiveContext::WithDirectiveContext(DirectiveContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::WithDirectiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitWithDirective(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypedefDirectiveContext ------------------------------------------------------------------

tree::TerminalNode* MandaParser::TypedefDirectiveContext::ID() {
  return getToken(MandaParser::ID, 0);
}

MandaParser::TypeContext* MandaParser::TypedefDirectiveContext::type() {
  return getRuleContext<MandaParser::TypeContext>(0);
}

std::vector<MandaParser::CommentContext *> MandaParser::TypedefDirectiveContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::TypedefDirectiveContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

MandaParser::TypedefDirectiveContext::TypedefDirectiveContext(DirectiveContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::TypedefDirectiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitTypedefDirective(this);
  else
    return visitor->visitChildren(this);
}
MandaParser::DirectiveContext* MandaParser::directive() {
  DirectiveContext *_localctx = _tracker.createInstance<DirectiveContext>(_ctx, getState());
  enterRule(_localctx, 4, MandaParser::RuleDirective);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(92);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<DirectiveContext *>(_tracker.createInstance<MandaParser::ImportDirectiveContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(54);
        comment();
        setState(59);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(60);
      match(MandaParser::T__0);
      setState(61);
      match(MandaParser::ID);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<DirectiveContext *>(_tracker.createInstance<MandaParser::WithDirectiveContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(62);
        comment();
        setState(67);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(68);
      match(MandaParser::T__1);
      setState(69);
      match(MandaParser::ID);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<DirectiveContext *>(_tracker.createInstance<MandaParser::TypedefDirectiveContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(70);
        comment();
        setState(75);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(76);
      match(MandaParser::T__2);
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(77);
        comment();
        setState(82);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(83);
      match(MandaParser::ID);
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(84);
        comment();
        setState(89);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(90);
      match(MandaParser::T__3);
      setState(91);
      type(0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MandaParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MandaParser::StatementContext::getRuleIndex() const {
  return MandaParser::RuleStatement;
}

void MandaParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExpressionStatementContext ------------------------------------------------------------------

MandaParser::ExpressionContext* MandaParser::ExpressionStatementContext::expression() {
  return getRuleContext<MandaParser::ExpressionContext>(0);
}

MandaParser::ExpressionStatementContext::ExpressionStatementContext(StatementContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnStatementContext ------------------------------------------------------------------

MandaParser::ExpressionContext* MandaParser::ReturnStatementContext::expression() {
  return getRuleContext<MandaParser::ExpressionContext>(0);
}

std::vector<MandaParser::CommentContext *> MandaParser::ReturnStatementContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::ReturnStatementContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

MandaParser::ReturnStatementContext::ReturnStatementContext(StatementContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::ReturnStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitReturnStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VariableDeclarationStatementContext ------------------------------------------------------------------

MandaParser::VariableModifierContext* MandaParser::VariableDeclarationStatementContext::variableModifier() {
  return getRuleContext<MandaParser::VariableModifierContext>(0);
}

tree::TerminalNode* MandaParser::VariableDeclarationStatementContext::ID() {
  return getToken(MandaParser::ID, 0);
}

MandaParser::ExpressionContext* MandaParser::VariableDeclarationStatementContext::expression() {
  return getRuleContext<MandaParser::ExpressionContext>(0);
}

std::vector<MandaParser::CommentContext *> MandaParser::VariableDeclarationStatementContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::VariableDeclarationStatementContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

MandaParser::TypeAnnotationContext* MandaParser::VariableDeclarationStatementContext::typeAnnotation() {
  return getRuleContext<MandaParser::TypeAnnotationContext>(0);
}

MandaParser::VariableDeclarationStatementContext::VariableDeclarationStatementContext(StatementContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::VariableDeclarationStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitVariableDeclarationStatement(this);
  else
    return visitor->visitChildren(this);
}
MandaParser::StatementContext* MandaParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, MandaParser::RuleStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MandaParser::ExpressionStatementContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(94);
      expression(0);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MandaParser::ReturnStatementContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(98);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(95);
        comment();
        setState(100);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(101);
      match(MandaParser::T__4);
      setState(102);
      expression(0);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<StatementContext *>(_tracker.createInstance<MandaParser::VariableDeclarationStatementContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(103);
      variableModifier();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(104);
        comment();
        setState(109);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(110);
      match(MandaParser::ID);
      setState(112);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
      case 1: {
        setState(111);
        typeAnnotation();
        break;
      }

      }
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(114);
        comment();
        setState(119);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(120);
      match(MandaParser::T__3);
      setState(121);
      expression(0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableModifierContext ------------------------------------------------------------------

MandaParser::VariableModifierContext::VariableModifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MandaParser::VariableModifierContext::getRuleIndex() const {
  return MandaParser::RuleVariableModifier;
}

void MandaParser::VariableModifierContext::copyFrom(VariableModifierContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VarModifierContext ------------------------------------------------------------------

std::vector<MandaParser::CommentContext *> MandaParser::VarModifierContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::VarModifierContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

MandaParser::VarModifierContext::VarModifierContext(VariableModifierContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::VarModifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitVarModifier(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LetModifierContext ------------------------------------------------------------------

std::vector<MandaParser::CommentContext *> MandaParser::LetModifierContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::LetModifierContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

MandaParser::LetModifierContext::LetModifierContext(VariableModifierContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::LetModifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitLetModifier(this);
  else
    return visitor->visitChildren(this);
}
MandaParser::VariableModifierContext* MandaParser::variableModifier() {
  VariableModifierContext *_localctx = _tracker.createInstance<VariableModifierContext>(_ctx, getState());
  enterRule(_localctx, 8, MandaParser::RuleVariableModifier);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(139);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 17, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<VariableModifierContext *>(_tracker.createInstance<MandaParser::LetModifierContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(128);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(125);
        comment();
        setState(130);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(131);
      match(MandaParser::T__5);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<VariableModifierContext *>(_tracker.createInstance<MandaParser::VarModifierContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(135);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(132);
        comment();
        setState(137);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(138);
      match(MandaParser::T__6);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

MandaParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MandaParser::TypeContext::getRuleIndex() const {
  return MandaParser::RuleType;
}

void MandaParser::TypeContext::copyFrom(TypeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UnionTypeContext ------------------------------------------------------------------

std::vector<MandaParser::TypeContext *> MandaParser::UnionTypeContext::type() {
  return getRuleContexts<MandaParser::TypeContext>();
}

MandaParser::TypeContext* MandaParser::UnionTypeContext::type(size_t i) {
  return getRuleContext<MandaParser::TypeContext>(i);
}

std::vector<MandaParser::CommentContext *> MandaParser::UnionTypeContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::UnionTypeContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

MandaParser::UnionTypeContext::UnionTypeContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::UnionTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitUnionType(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StructTypeContext ------------------------------------------------------------------

std::vector<MandaParser::CommentContext *> MandaParser::StructTypeContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::StructTypeContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

std::vector<MandaParser::StructTypeFieldContext *> MandaParser::StructTypeContext::structTypeField() {
  return getRuleContexts<MandaParser::StructTypeFieldContext>();
}

MandaParser::StructTypeFieldContext* MandaParser::StructTypeContext::structTypeField(size_t i) {
  return getRuleContext<MandaParser::StructTypeFieldContext>(i);
}

MandaParser::StructTypeContext::StructTypeContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::StructTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitStructType(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenthesizedTypeContext ------------------------------------------------------------------

MandaParser::TypeContext* MandaParser::ParenthesizedTypeContext::type() {
  return getRuleContext<MandaParser::TypeContext>(0);
}

std::vector<MandaParser::CommentContext *> MandaParser::ParenthesizedTypeContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::ParenthesizedTypeContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

MandaParser::ParenthesizedTypeContext::ParenthesizedTypeContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::ParenthesizedTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitParenthesizedType(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdentifierTypeContext ------------------------------------------------------------------

tree::TerminalNode* MandaParser::IdentifierTypeContext::ID() {
  return getToken(MandaParser::ID, 0);
}

std::vector<MandaParser::CommentContext *> MandaParser::IdentifierTypeContext::comment() {
  return getRuleContexts<MandaParser::CommentContext>();
}

MandaParser::CommentContext* MandaParser::IdentifierTypeContext::comment(size_t i) {
  return getRuleContext<MandaParser::CommentContext>(i);
}

MandaParser::TypeParameterListContext* MandaParser::IdentifierTypeContext::typeParameterList() {
  return getRuleContext<MandaParser::TypeParameterListContext>(0);
}

MandaParser::IdentifierTypeContext::IdentifierTypeContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MandaParser::IdentifierTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MandaVisitor*>(visitor))
    return parserVisitor->visitIdentifierType(this);
  else
    return visitor->visitChildren(this);
}

MandaParser::TypeContext* MandaParser::type() {
   return type(0);
}

MandaParser::TypeContext* MandaParser::type(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  MandaParser::TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, parentState);
  MandaParser::TypeContext *previousContext = _localctx;
  size_t startState = 10;
  enterRecursionRule(_localctx, 10, MandaParser::RuleType, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(199);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 27, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<IdentifierTypeContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(145);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(142);
        comment();
        setState(147);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(148);
      match(MandaParser::ID);
      setState(150);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 19, _ctx)) {
      case 1: {
        setState(149);
        typeParameterList();
        break;
      }

      }
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<StructTypeContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(155);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT

      || _la == MandaParser::SINGLE_LINE_COMMENT) {
        setState(152);
        comment();
        setState(157);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(158);
      match(MandaParser::T__8);
      setState(174);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 23, _ctx)) {
      case 1: {
        setState(170);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 22, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(159);
            structTypeField();
            setState(163);
            _errHandler->sync(this);
            _la = _input->LA(1);
            while (_la == MandaParser::DOC_COMMENT

            || _la == MandaParser::SINGLE_LINE_COMMENT) {
              setState(160);
              comment();
              setState(165);
              _errHandler->sync(this);
              _la = _input->LA(1);
            }
            setState(166);
            match(MandaParser::T__9); 
          }
          setState(172);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 22, _ctx);
        }
        setState(173);
        structTypeField();
        break;
      }

      }
      setState(179);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MandaParser::DOC_COMMENT
